[package]
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
default-run = "pwbot"
description = "Pi Wars Discord bot for the Barum Jam"
edition = "2018"
homepage = "https://github.com/shymega/PiWarsBot"
license = "Apache-2.0"
name = "pi_wars_bot"
publish = false
readme = "README.md"
repository = "https://github.com/shymega/PiWarsBot"
version = "0.1.0"

[[bin]]
name = "pwbot"

[lib]
name = "pwbot"
path = "src/lib.rs"

[dependencies]

[dependencies.tokio] # for async
version = "0.3.0"
features = ["full"]

[dependencies.egg-mode] # for Twitter
version = "0.15"
default-features = false
features = ["rustls"]

[dependencies.serenity] # for Discord
default-features = false
features = [
  "framework",
  "standard_framework",
  "builder",
  "gateway",
  "model",
  "rustls_backend",
  "utils"]
version = "0.9.0-rc.2"

[profile.release] # make exec size smaller
lto = "on"
opt-level = 'z'
codegen-units = 1
