[package]
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
default-run = "piwarsbot"
description = "Pi Wars Discord bot for the Barum Jam"
edition = "2018"
homepage = "https://github.com/shymega/PiWarsBot"
license = "Apache-2.0"
name = "pi_wars_bot"
publish = false
readme = "README.md"
keywords = ["discord", "bot", "twitter"]
categories = ["bot", "discord"]
repository = "https://github.com/shymega/PiWarsBot"
version = "0.2.0"

[[bin]]
name = "piwarsbot"

[lib]
name = "piwarsbot"
path = "src/lib.rs"

[dependencies]
dotenv = "0.15.0"
futures = "0.3.7"
egg-mode = "0.15.0"

[dependencies.tokio]
default-features = false
version = "0.2"
features = ["full"]

[dependencies.serenity]
default-features = false
features = [
  "framework",
  "standard_framework",
  "builder",
  "gateway",
  "model",
  "rustls_backend",
  "utils"]
version = "0.9.0"

[profile.dev]
lto = true
opt-level = "z"
codegen-units = 1
debug = false

[profile.dev.package."*"]
codegen-units = 1
opt-level = "z"
debug = false

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
debug = false

[profile.release.package."*"]
codegen-units = 1
opt-level = "z"
debug = false
